<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>whi_nav2_bt_actions_server</name>
  <version>0.0.1</version>
  <description>nav2 bt actions server</description>
  <maintainer email="xinjue.zou.whi@gmail.com">Xinjue</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>nav2_common</build_depend>
  <depend>angles</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_2d_utils</depend>
  <depend>nav_2d_msgs</depend>
  <depend>nav2_core</depend>
  <depend>pluginlib</depend>
  <depend>whi_interfaces</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/plugins.xml" />
  </export>
</package>
